<resources>
    <!-- app -->
    <string name="app_name">BangCalendar</string>
    <string name="band">乐队</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>
    <string name="jump">日期跳转</string>
    <string name="search_activity">数据库检索</string>
    <string name="event_list_activity">活动列表</string>
    <string name="browse_mode">浏览模式</string>
    <string name="character_list_activity">角色列表</string>
    <string name="DailyTag">DailyTag</string>
    <string name="plusButton">添加功能</string>
    <string name="todayButton">返回今天</string>
    <string name="logo">logo</string>
    <string name="select_bg">选中项背景</string>
    <string name="birthday">生日</string>
    <string name="event">活动</string>
    <string name="zero">0</string>
    <string name="day">天</string>
    <string name="char_name">角色名称</string>
    <string name="welcome">"欢迎使用\nBangCalendar"</string>
    <string name="welcome_button">"开始使用"</string>
    <string name="init_complete">"初始化完成，请点击按钮进入应用"</string>
    <!-- week -->
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="sun">日</string>
    <!-- event type -->
    <string name="normalLive">一般活动（协力）</string>
    <string name="challengeLive">挑战LIVE（CP）</string>
    <string name="missionLive">任务LIVE（协力）</string>
    <string name="vsLive">竞演LIVE（对邦）</string>
    <string name="goalsLive">LIVE试炼（EX）</string>
    <string name="multiVs">团队LIVE（5v5）</string>
    <string name="groupLive">组曲LIVE（3组曲）</string>
    <!-- event info -->
    <string name="char1">角色1</string>
    <string name="char2">角色2</string>
    <string name="char3">角色3</string>
    <string name="char4">角色4</string>
    <string name="char5">角色5</string>
    <string name="char6">角色6</string>
    <string name="char7">角色7</string>
    <string name="prepare">尚未开始</string>
    <string name="finish">已经结束</string>
    <string name="ing">正在进行</string>
    <string name="closeToEnd">即将结束</string>
    <!-- event attrs -->
    <string name="eventAttrs">eventAttrs</string>
    <string name="pure">Pure</string>
    <string name="powerful">Powerful</string>
    <string name="cool">Cool</string>
    <string name="happy">Happy</string>
    <!-- character -->
    <string name="bir_char">角色生日</string>
    <string name="happy_birthday">生日快乐</string>
    <!-- band -->
    <string name="ppp">ppp</string>
    <string name="ag">ag</string>
    <string name="pp">pp</string>
    <string name="r">r</string>
    <string name="hhw">hhw</string>
    <string name="m">m</string>
    <string name="ras">ras</string>
    <string name="mg">mg</string>
    <string name="other">other</string>
    <!-- settings -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="preference_header">用户偏好</string>
    <string name="user_name_title">昵称</string>
    <string name="theme_title">主题</string>
    <string name="band_title">关注的乐队</string>
    <string name="char_title">关注的角色</string>
    <string name="notification">FCM推送</string>
    <string name="notification_summary">提供活动开始、结束等事件的提醒</string>
    <string name="notification_text">FCM推送需要GMS支持，由于谷歌并未在国内架设服务器，因此无法保证推送一定可以送达，请勿依赖本功能\n由于国内定制UI可能屏蔽了FCM通知，导致收不到推送，因此建议您使用安卓原生\n注意：本功能开启后将无法关闭</string>
    <string name="notification_head">通知服务</string>
    <string name="update_header">同步</string>
    <string name="update_database_title">更新本地数据库</string>
    <string name="update_database_summary">更新完成后建议您重启应用</string>
    <string name="sign_in_title">登录</string>
    <string name="sign_in_summary">未登录</string>
    <string name="upload_user_preference_title">备份用户偏好</string>
    <string name="download_user_preference_title">恢复用户偏好</string>
    <string name="recover_complete">用户偏好恢复完成，重启应用后生效，是否现在重启？</string>
    <string name="upload_user_preference_summary">备份昵称、乐队等偏好至云端</string>
    <string name="download_user_preference_summary">从云端恢复昵称、乐队等偏好</string>
    <string name="experimental">试验性功能</string>
    <string name="nvbar_title">小白条沉浸</string>
    <string name="nvbar_summary">开启后，若导航栏异常，请关闭</string>
    <string name="anim_title">优雅的动画速率</string>
    <string name="anim_summary">开启后，若出现异常情况，请关闭</string>
    <string name="about_header">关于</string>
    <string name="version_title">版本</string>
    <string name="version">1.6.3</string>
    <string name="program_title">项目地址</string>
    <string name="program_url">https://github.com/mty1122/BangCalendar</string>
    <string name="material_title">素材来源</string>
    <string name="material_source">图片素材来自网络，如有侵权，烦请通知删除</string>
    <string name="event_pic_title">清除图片缓存</string>
    <string name="event_pic_summary">国服更新后，可获取中文活动图片</string>
    <string name="author_title">联系作者</string>
    <string name="author_mail">admin@mxmnb.cn</string>
    <!-- searchActivity -->
    <string name="search_edit">请输入活动编号或角色中文名</string>
    <string name="character_title">角色档案</string>
    <string name="character_pic">角色头像</string>
    <!-- additionalTip -->
    <string name="additional_tip">格式为：国服三周年 20220528</string>
    <!-- login -->
    <string name="phone">手机号：</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="sms_code">验证码：</string>
    <string name="sms_code_hint">请输入验证码</string>
    <string name="sms_send">发送验证码</string>
    <string name="sms_sending">发送中</string>
    <string name="sms_send_success">已发送</string>
    <string name="login_tip">Tip：点击发送验证码按钮后，您会收到一条来自“淡定的个人博客”的验证码，该网站为我的个人网站，请放心登录。</string>
    <string name="logging">登录中</string>
    <string name="cancel">取消</string>
    <string name="logout">您已登录，是否退出登录？</string>
    <string name="title_activity_guide2">GuideActivity2</string>
</resources>