<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/user_name_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="theme_ppp"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="other"
            app:entries="@array/band_entries"
            app:entryValues="@array/band_values"
            app:key="band"
            app:title="@string/band_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/char_entries"
            app:entryValues="@array/char_values"
            app:key="character"
            app:title="@string/char_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/update_header">

        <Preference
            app:key="update_database"
            app:title="@string/update_database_title"
            app:summary="@string/update_database_summary"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="sign_in"
            app:title="@string/sign_in_title"
            app:summary="@string/sign_in_summary"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="upload_preference"
            app:title="@string/upload_user_preference_title"
            app:summary="@string/upload_user_preference_summary"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="download_preference"
            app:title="@string/download_user_preference_title"
            app:summary="@string/download_user_preference_summary"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_head">

        <SwitchPreference
            app:defaultValue="false"
            app:key="notification"
            app:title="@string/notification"
            app:summary="@string/notification_summary"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/experimental">

        <SwitchPreference
            app:defaultValue="false"
            app:key="nvbar"
            app:title="@string/nvbar_title"
            app:summary="@string/nvbar_summary"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="anim"
            app:title="@string/anim_title"
            app:summary="@string/anim_summary"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">

        <Preference
            app:key="version"
            app:title="@string/version_title"
            app:summary="@string/version"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="program"
            app:title="@string/program_title"
            app:summary="@string/program_url"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="material"
            app:title="@string/material_title"
            app:summary="@string/material_source"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="author"
            app:title="@string/author_title"
            app:summary="@string/author_mail"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>