<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/eventCardItem"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="?attr/card_background_color"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eventType"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/missionLive"
            android:textColor="@color/white"
            android:background="?attr/card_bar_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="240dp"
            android:layout_height="75dp"
            app:layout_constraintTop_toBottomOf="@+id/eventType"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/eventBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/eventButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/attrsLayout"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/eventAttrs"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/eventAttrs" />

            <ImageView
                android:id="@+id/char1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/char1" />

            <ImageView
                android:id="@+id/char2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/char2" />

            <ImageView
                android:id="@+id/char3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/char3" />

            <ImageView
                android:id="@+id/char4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/char4" />

            <ImageView
                android:id="@+id/char5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/char5" />

        </LinearLayout>

        <ImageView
            android:id="@+id/eventBand"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:contentDescription="@string/band"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/frameLayout"
            app:layout_constraintTop_toBottomOf="@+id/eventType" />

        <LinearLayout
            android:id="@+id/progressLayout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/eventBand"
            app:layout_constraintStart_toEndOf="@id/attrsLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="8dp">

            <com.tomergoldst.progress_circle.ProgressCircle
                android:id="@+id/eventProgress"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/eventProgressName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7.5dp"
                android:text="@string/ing"
                android:textColor="?attr/colorPrimary"
                android:layout_gravity="center"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>