<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/birthdayView"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/birBack">

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/char_image"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_marginStart="7dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/character_pic" />

            <ImageView
                android:id="@+id/char_name_image"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/char_name" />

        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/bir_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/birBack"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:gravity="end"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/birthdayCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            android:text="@string/zero"
            android:textSize="30sp"
            android:textColor="?attr/app_text_color"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_gravity="center_vertical"
            android:text="@string/day"
            android:textColor="?attr/app_text_color"
            tools:ignore="RelativeOverlap" />

    </LinearLayout>

</RelativeLayout>